<resources>
    <string name="app_name">MangaQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_"><![CDATA[<]]></string>
    <string name="nome_historia">NOME_HISTORIA</string>
    <string name="_b"><![CDATA[<]]></string>
    <string name="_n"><![CDATA[>]]></string>
    <string name="__">-</string>
    <string name="_0_0">0/0</string>
    <string name="_x">X</string>
    <string name="favoritos">Favoritos</string>
    <string name="ex_one_piece">Ex: One piece</string>
</resources>
