<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.LeituraHistoria">

    <TextView
        android:id="@+id/titleChapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".3"
        android:background="#000"
        android:gravity="center"
        android:text="@string/__"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-44dp" />

    <Button
        android:id="@+id/backPage"
        android:layout_width="40dp"
        android:layout_height="150dp"
        android:alpha=".3"
        android:background="#000"
        android:onClick="goToPreviusPage"
        android:text="@string/_b"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvTheEnd"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:text="Fim"
        android:visibility="gone"
        android:textSize="200sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextPage"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/backPage"
        app:layout_constraintTop_toBottomOf="@+id/titleChapter" />

    <ImageView
        android:id="@+id/ivCurrentview"
        android:layout_width="410dp"
        android:layout_height="781dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextPage"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/backPage"
        app:layout_constraintTop_toBottomOf="@+id/titleChapter" />

    <Button
        android:id="@+id/nextPage"
        android:layout_width="40dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:alpha=".3"
        android:background="#000"
        android:onClick="goToNextPage"
        android:text="@string/_n"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/goBackToHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:alpha=".3"
        android:background="#000"
        android:onClick="setGoBackToChapters"
        android:text="@string/_x"
        android:textColor="#fff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCurrentPage"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:alpha=".3"
        android:background="#000"
        android:gravity="center"
        android:text="@string/_0_0"
        android:textColor="#fff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>